fix(): createReport works in front-end
